--- a/04hand-coding/fish.css
+++ b/04hand-coding/fish.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Oxygen', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     font-size: 16px;
     font-weight: 300;
     margin: 0;
